--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -44,7 +44,7 @@ body {
   }
   
   .list-social-icons a:hover {
-    color: #BD5D38;
+    color: #17a2b8;
   }
   
   .list-social-icons a .fa-lg {
@@ -56,7 +56,7 @@ body {
   }
   
   .list-icons .list-inline-item i:hover {
-    color: #BD5D38;
+    color: #17a2b8;
   }
   
   #sideNav .navbar-nav .nav-item .nav-link {
@@ -131,18 +131,18 @@ body {
   }
   
   .bg-primary {
-    background-color: #BD5D38 !important;
+    background-color: #17a2b8 !important;
   }
   
   .text-primary {
-    color: #BD5D38 !important;
+    color: #17a2b8 !important;
   }
   
   a {
-    color: #BD5D38;
+    color: #17a2b8;
   }
   
   a:hover, a:focus, a:active {
-    color: #824027;
+    color: #17a2b8;
   }
   
